fix(DefinitionList): fix styles of note alignment

--- a/src/components/DefinitionList/DefinitionList.scss
+++ b/src/components/DefinitionList/DefinitionList.scss
@@ -90,8 +90,4 @@ $block: '.#{variables.$ns}definition-list';
             opacity: 1;
         }
     }
-
-    &__note {
-        vertical-align: middle;
-    }
 }
